--- a/sociology-dating-app/package.json
+++ b/sociology-dating-app/package.json
@@ -2,7 +2,7 @@
   "name": "sociology-dating-app",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://l0g4n2.github.io/HopeThisWorks/",
+  "homepage": "https://l0g4n2.github.io/HopeThisWorks/sociology-dating-app/",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
